# smart-contract

./: .cspell.json  .git-cliff.toml  .gitignore  .lycheeignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  WARP.md  check_build.bat  check_output.txt  deny.toml  docker-compose.yml  github_issues.md  lychee.toml  mkdocs.yml  package-lock.json  package.json
contracts/analytics/: Cargo.toml  README.md
contracts/analytics/src/: analytics_engine.rs  errors.rs  events.rs  gas_optimized.rs  integration_tests.rs  interface.rs  lib.rs  reports.rs  storage.rs  tests.rs  types.rs
contracts/certificate/: Cargo.toml  METADATA_UPDATE_GUIDE.md  README.md
contracts/certificate/src/: comprehensive_validation_tests.rs  errors.rs  events.rs  expiry_integration_tests.rs  expiry_management.rs  expiry_tests.rs  gas_regression_tests_minimal.rs  gas_regression_tests_simple.rs  integration_tests.rs  interface.rs  lib.rs  lib_backup.rs  lib_gas_testing.rs  lib_minimal.rs  metadata_validation_tests.rs  multisig.rs  multisig_integration_tests.rs  multisig_tests.rs  prerequisite_integration_tests.rs  prerequisite_tests.rs  prerequisites.rs  storage.rs  test.rs  test_rbac.rs  types.rs  validation.rs
contracts/certificate/test_snapshots/test/: test_certificate_expiry.1.json  test_certificate_mint_and_verify.1.json  test_certificate_revocation.1.json  test_initialize.1.json  test_is_valid_certificate.1.json  test_permission_checks.1.json  test_role_management.1.json  test_track_certificates.1.json  test_update_certificate_uri.1.json
contracts/gamification/: Cargo.toml
contracts/gamification/src/: achievements.rs  challenges.rs  errors.rs  events.rs  guilds.rs  leaderboard.rs  lib.rs  reputation.rs  seasons.rs  social.rs  storage.rs  tests.rs  types.rs
contracts/gamification/test_snapshots/tests/: test_adaptive_difficulty_defaults_to_beginner.1.json  test_adaptive_difficulty_updates_after_challenge.1.json  test_admin_can_create_custom_achievement.1.json  test_assessment_score_scales_xp.1.json  test_cannot_join_two_guilds.1.json  test_challenge_completion_awards_xp.1.json  test_claim_achievement_reward.1.json  test_consecutive_day_streak_grows.1.json  test_course_completion_awards_more_xp_than_module.1.json  test_create_and_join_challenge.1.json  test_create_guild.1.json  test_create_season_and_earn_season_xp.1.json  test_endorsement_daily_rate_limit.1.json  test_endorsement_unlocks_next_day.1.json  test_first_course_achievement_awarded.1.json  test_guild_leaderboard_updates.1.json  test_guild_xp_accumulates_from_members.1.json  test_high_score_boosts_quality_reputation.1.json  test_initialize.1.json  test_join_guild.1.json  test_leaderboard_limit_respected.1.json  test_leaderboard_populates_after_activity.1.json  test_leave_guild.1.json  test_missed_day_resets_streak.1.json  test_module_completion_awards_xp.1.json  test_peer_endorsement.1.json  test_peer_recognition.1.json  test_quest_chain_prerequisite_enforced.1.json  test_reputation_grows_with_activity.1.json  test_season_xp_multiplier_applies.1.json  test_self_endorsement_rejected.1.json  test_study_session_awards_time_based_xp.1.json
contracts/mint-batch-certificates/: Cargo.toml  README.md
contracts/mint-batch-certificates/src/: auth.rs  certificate.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/mint-batch-certificates/test_snapshots/test/: test_basic_contract_flow.1.json  test_batch_minting.1.json  test_revocation.1.json
contracts/mobile-optimizer/: Cargo.toml  README.md
contracts/mobile-optimizer/src/: analytics_monitor.rs  batch_manager.rs  battery_optimizer.rs  collaboration_manager.rs  content_cache.rs  content_manager.rs  gas_optimizer.rs  interaction_flows.rs  lib.rs  network_manager.rs  notification_manager.rs  offline_manager.rs  pwa_manager.rs  security_manager.rs  session_manager.rs  tests.rs  types.rs  user_experience_manager.rs
contracts/mobile-optimizer/test_snapshots/tests/: test_analytics_dashboard.1.json  test_authentication_success.1.json  test_battery_charging_normal_mode.1.json  test_battery_low_power_mode.1.json  test_battery_profile_update.1.json  test_biometric_auth_enable.1.json  test_cache_content_and_retrieve.1.json  test_cache_invalidation.1.json  test_cache_stats.1.json  test_cached_route_registration.1.json  test_cancel_reminder.1.json  test_complete_mobile_workflow.1.json  test_content_management.1.json  test_contract_statistics.1.json  test_create_and_get_session.1.json  test_cross_device_sync.1.json  (+35 more)
contracts/progress/: Cargo.toml  README.md
contracts/progress/src/: gas_optimized.rs  lib.rs
contracts/proxy/: Cargo.toml  README.md  tests.rs
contracts/proxy/src/: lib.rs  tests.rs
contracts/search/: Cargo.toml  README.md
contracts/search/src/: indexing.rs  lib.rs  search_manager.rs  tests.rs  types.rs
contracts/security-monitor/: Cargo.toml
contracts/security-monitor/src/: circuit_breaker.rs  errors.rs  events.rs  interface.rs  lib.rs  recommendation_engine.rs  storage.rs  tests.rs  threat_detector.rs  types.rs
contracts/shared/: Cargo.toml  README.md
contracts/shared/src/: access_control.rs  error_handling.rs  errors.rs  event_aggregator.rs  event_filter.rs  event_manager.rs  event_publisher.rs  event_replay.rs  event_schema.rs  event_utils.rs  events.rs  gas_optimizer.rs  gas_testing.rs  lib.rs  logger.rs  permissions.rs  reentrancy_guard.rs  roles.rs  simple_tests.rs  storage.rs  test.rs  upgrade.rs  validation.rs
contracts/student-progress-tracker/: Cargo.toml  README.md
contracts/student-progress-tracker/src/: gas_optimized.rs  lib.rs  test.rs
contracts/token/: Cargo.toml  README.md
contracts/token/src/: gas_optimized.rs  incentive_integration_tests.rs  incentive_tests.rs  incentives.rs  interface.rs  lib.rs  reentrancy_tests.rs  test.rs  types.rs
e2e-tests/: Cargo.toml  README.md
e2e-tests/src/: lib.rs  test_data.rs  test_utils.rs
e2e-tests/tests/: analytics_integration.rs  integration.rs  test_data.rs  test_utils.rs
sdks/python/: pyproject.toml
utils/streller-cli/: Cargo.toml
utils/streller-cli/src/: main.rs
(+172 files in other folders)
