[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "22"
soroban-auth = "20.0.0"
stellar-strkey = "0.0.7"
ed25519-dalek = "2.0.0"
rand = "0.8.5"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
