[package]
name = "certificate"
version = "0.1.0"
edition = "2021"
description = "A comprehensive certificate management system for educational credentials on the Stellar blockchain with advanced features including expiry management, multi-signature approval, and prerequisite validation"
license = "Apache-2.0"
repository = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
readme = "README.md"
homepage = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
documentation = "https://docs.rs/certificate"
keywords = ["stellar", "blockchain", "education", "certificates", "soroban"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
shared = { path = "../shared" }
