[package]
name = "gamification"
version = "0.1.0"
edition = "2021"
description = "Comprehensive gamification system with achievements, leaderboards, challenges, guilds, seasons, reputation, and social learning features for educational platforms"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
