[package]
name = "mint-batch-certificates"
version = "0.1.0"
edition = "2021"
description = "A specialized contract for efficiently minting multiple certificates in batch operations, optimizing gas usage and providing robust error handling for bulk certificate issuance in educational platforms"
license = "Apache-2.0"
repository = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
readme = "README.md"
homepage = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
documentation = "https://docs.rs/mint-batch-certificates"
keywords = ["stellar", "blockchain", "education", "certificates", "soroban"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
