[package]
name = "progress"
version = "0.1.0"
edition = "2021"
description = "A simple and efficient contract for tracking student progress through educational courses, managing course enrollment, module completion tracking, and progress validation with built-in safeguards"
license = "Apache-2.0"
repository = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
readme = "README.md"
homepage = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
documentation = "https://docs.rs/progress"
keywords = ["stellar", "blockchain", "education", "progress", "soroban"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
