[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
description = "An upgradeable proxy contract for Stellar smart contracts using Soroban, allowing contract implementation updates while maintaining the same address, with built-in rollback capabilities"
license = "Apache-2.0"
repository = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
readme = "README.md"
homepage = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
documentation = "https://docs.rs/proxy"
keywords = ["stellar", "blockchain", "education", "proxy", "soroban"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
