[package]
name = "search"
version = "0.1.0"
edition = "2021"
description = "A comprehensive search system for educational content on the Stellar blockchain providing advanced search capabilities including saved searches, search preferences, search history, suggestions, and analytics"
license = "Apache-2.0"
repository = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
readme = "README.md"
homepage = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
documentation = "https://docs.rs/search"
keywords = ["stellar", "blockchain", "education", "search", "soroban"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "search"
path = "src/bin/search.rs"
