[package]
name = "security-monitor"
version = "0.1.0"
edition = "2021"
description = "Security monitoring and threat detection contract"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
