[package]
name = "student-progress-tracker"
version = "0.1.0"
edition = "2021"
description = "A specialized contract for tracking individual student progress through course modules with granular progress tracking and percentage-based completion for detailed learning analytics and personalized educational experiences"
license = "Apache-2.0"
repository = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
readme = "README.md"
homepage = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
documentation = "https://docs.rs/student-progress-tracker"
keywords = ["stellar", "blockchain", "education", "progress", "soroban"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }