[package]
name = "token"
version = "0.1.0"
edition = "2021"
description = "A comprehensive token management system with advanced incentive mechanisms for educational platforms, implementing achievements, staking pools, and referral programs to gamify the learning experience"
license = "Apache-2.0"
repository = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
readme = "README.md"
homepage = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
documentation = "https://docs.rs/token"
keywords = ["stellar", "blockchain", "education", "tokens", "soroban"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
