[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strellerminds-sdk"
version = "0.1.0"
authors = [
  { name="StrellerMinds Team", email="info@strellerminds.io" },
]
description = "Python SDK for StrellerMinds Smart Contracts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "stellar-sdk",
]

[project.urls]
"Homepage" = "https://github.com/StarkMindsHQ/StrellerMinds-SmartContracts"
"Bug Tracker" = "https://github.com/StarkMindsHQ/StrellerMinds-SmartContracts/issues"
